Prepare for 1.7.0 release (#79)
* Add option to display partition stats
* Sonarcloud updates
* Add view cache on Cache tab
* Initial version of tracer support
* Add service and proxy probes
* add federation and elastic data probes